
           Added New Indicator menu option to the chart context menu. Removed the configure button placement.

           Fixed bug ID 3187594 - 0.37-dev recent price not visible.

           Finally fixed the actual date/time display for bars.

           NOTE* please do a full make distclean for this update. lib has changed.

           Added new plugin CHART_OBJECT_NEW and new system script ChartObjectNew.pl.

           Added a plot font setting CONFIGURE_DIALOG.

           Fixed Text chart object now displays proper font.
          
           Added yahoo download script as a default for script launch button 1.

20110222:  Fixed yahoo date bug. Was not downloading correct dates.

           Changed the script table schema. CVS users will need to manually drop the script table
           in ~/.qtstalker/data.sqlite database.

           Fixed dialogs first appearing at point 0,0 on the screen.

           Symbols in the group panel now show company name in the tooltip.

20110224:  Split the config files into 2. One for local sessions and one for global settings.
           These changes should fix the empty indicator fresh install and the symbol search
           issues.

           Moved the indicator, group and script databases out of sqlite and into QSettings.
           indicators are now in the local QSettings, script and groups are global.

           Fixed bug # 3190704 - 0.37-dev chart grid toggle.

           Fixed the empty exchange database fresh install bug.

           Fixed symbol name not being updated in QuoteDataBase when using the name parameter in
           QUOTE_DATABASE_SET.

           Put the new indicator button back into the config/options control panel.

           Fixed key accelerators in the menus to use just a letter or number. No ALT or CTRL keys needed.

20110225:  Fixed ExchangeDataBase startup sync bug.

           Added global key shortcuts:
            
           