@@ -8,6 +8,7 @@ HEADERS += YahooDialog.h
 HEADERS += YahooSymbolDialog.h
 HEADERS += YahooDataBase.h
 HEADERS += YahooHistory.h
+HEADERS += YahooSymbol.h
 
 SOURCES += YAHOO_DIALOG.cpp
 SOURCES += YahooAddSymbolDialog.cpp
@@ -15,3 +16,4 @@ SOURCES += YahooDialog.cpp
 SOURCES += YahooSymbolDialog.cpp
 SOURCES += YahooDataBase.cpp
 SOURCES += YahooHistory.cpp
+SOURCES += YahooSymbol.cpp
